Add a wrapper for execve(2)
luaposix exec and execp don't seem to offer a way to specify the
environment, so let's add a C module which wraps the system call and
implement niceties such as path searching in lua.

I'm not sure how the lib.freebsd.sys namespace should look, but what I
have now is awkward.

--- a/lib/freebsd/sys/Makefile
+++ b/lib/freebsd/sys/Makefile
@@ -1,9 +1,4 @@
-SHLIB_NAME=	sysctl.so
+SUBDIR=	execve	\
+	sysctl
 
-SRCS+=		lua_sysctl.c
-
-CFLAGS+=	-I/usr/local/include/lua54
-
-WARNS?=		6
-
-.include <bsd.lib.mk>
+.include <bsd.subdir.mk>
